templates/keycloak/26.3.1/60-Keycloak.Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
  namespace: $NAMESPACE
  labels:
    app: keycloak
spec:
  host: $KEYCLOAK_INGRESS_URL
  to:
    kind: Service
    name: keycloak-instance-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
